css/style.css
/* Reset */
img {
    max-width: 100%;
}

/* Variables */
:root {
    --blue: #2C3E50;
    --blue-light: #3A546D;
    --acqua: #1ABC9C;
    --white: #fff;
}

.wrapper-60 {
    width: 60%;
    margin: 0 auto;
}

.navbar-brand {
    color: var(--white);
}

.nav-item {
    color: var(--white);
}

.nav-link {
    color: var(--white);
}

/* Header */
header {
    background-color: var(--blue);
}

/* Main */

/* Hero */
#hero {
    background-color: var(--acqua);
    min-height: 100px;
    color: var(--white);
    text-align: center;
    margin-top: 56px;
}

#hero img {
    width: 250px;
    height: 250px;
}

/* About section */
#about {
    background-color: var(--acqua);
    color: var(--white);
}

.btn-width {
    width: 120px;
}

/* Contact section */

.form-control {
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-radius: 0;
}

.wrapper-60 label {
    font-weight: 600;
    font-size: 1.2rem;
    color: var(--blue);
}

.btn-primary {
    background-color: var(--acqua);
    border-color: var(--acqua);
}

/* Footer */

footer {
    background-color: var(--blue-light);
    color: var(--white);
}

footer ul {
    list-style-type: none;
    padding-left: 0;
}

footer li {
    margin: 0 5px;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: 1px solid;
    border-color: var(--white);
}

footer a {
    color: var(--white);
}

footer i {
    font-size: 1rem;
}

.acqua {
    color: var(--acqua);
}

.copy {
    background-color: var(--blue);
}

